Fixed code block scrollbars

--- a/assets/css/theme-code.css
+++ b/assets/css/theme-code.css
@@ -193,13 +193,14 @@ h1, h2, h3, h4, h5, h6,
   font-size: 0.8em;
   line-height: 1;
   white-space: pre;
-  overflow-x: scroll;
+  overflow-x: auto;
   width: 100%;
 }
 
 .post-content pre code {
   border: 0;
   padding: 0px;
+  overflow-y: hidden;
 }
 
 
